<resources>
    <string name="app_name">Desa Kampung Anyar</string>
    <string name="kueKelembenKrajan">\t Kue Kelemben Gula Aren merupakan kue tradisional khas Banyuwangi. Kue ini memiliki bentuk seperti tempurung kura-kura dengan rasa gula aren yang legit dan tekstur yang lembut. Harga kue kelemben sendiri cukup terjangkau, untuk kemasan kecil seharga 10.000 rupiah dan untuk kemasan besar seharga 50.000 rupiah. Jika ingin menikmati kue ini anda dapat mengunjungi Dusun Krajan Rumah Ibu Nurhayati. Ibu Nurhayati memulai UMKM kue Kelemben sejak tahun 2013. Ibu Nurhayati merupakan satu-satunya penjual yang menggunakan gula aren sebagai bahan dasar pembuatan kue kelemben, sebagian besar penjual kue kelemben yang lain hanya menggunakan gula putih. Banyak wisatawan yang membeli kue kelemben sebagai oleh-oleh khas Banyuwangi.\n</string>
    <string name="gambar_produk">Gambar Produk</string>
    <string name="gambar_wisata">Gambar Wisata</string>
    <string name="gambar_pertanian">Gambar Pertanian</string>
    <string name="gambar_perkebunan">Gambar Perkebunan</string>
    <string name="gambar_peternakan">Gambar Peternakan</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="profil_pemilik_usaha">Profil Pemilik Usaha</string>
    <string name="profil_wisata">Profil Pengelola Wisata</string>
    <string name="profil_kebun">Profil Pemilik Kebun</string>
    <string name="profil_peternakan">Profil Peternakan</string>
    <string name="wisataKaliKedungKrajan">\tKali Kedung merupakan tempat wisata arung jeram pertama yang terdapat di Dusun Krajan. Dioperasikan akhir tahun 2015, wisata ini dikelola oleh ibu Vina yang sekaligus pemilik kedai makanan ringan di area Kali Kedung. Di Kedai ini tersedia tahu walik hangat yang mampu menemani wisatawan menikmati aliran sungai dan rindangnya hutan. Terdapat banyak pendopo yang berdiri kokoh melindungi pengunjung dari teriknya matahari. Suasana yang romantis dan teduh membuat banyak pengunjung tertarik untuk berkunjung sekedar menghabiskan waktu bersama. Aliran arus yang mengalir deras melewati batu-batu besar mempermudah dalam berarung jeram. Wisata ini tidak dikenakan biaya masuk, akan tetapi jika meminjam ban dan pelampung akan dikenakan biaya sebesar 6.000 rupiah. Kali Kedung juga memiliki fasilitas perkemahan. Sehingga bagi pecinta alam, tempat wisata ini sangat cocok sekali untuk dikunjungi.\n</string>
    <string name="wisataJagirKrajan">\tAir Terjun Jagir terletak di Dusun Krajan, Kecamatan Glagah, Kota Banyuwangi. Air terjun yang terdiri sejak tahun 2013 ini merupakan air terjun terbesar di Dusun Krajan. Banyak wisatawan asing yang berkunjung ke wisata ini. Rata-rata pengunjung yang datang berasal dari wisata Kawah Ijen dan singgah di air terjun Jagir untuk mandi. Keunggulan dari wisata ini yaitu banyak spot foto yang tersedia seperti jembatan merah, pondok joglo, dan sumber mata air yang sangat jernih dan alami. Fasilitas yang tersedia terdapat kamar mandi, mushola, serta tempat untuk bersantai dan piknik. Banyak pengunjung yang tertarik dengan wisata ini karena tiket masuk yang murah sebesar 5.000 rupiah per orang. Dengan harga sangat murah pengunjung dapat menikmati udara yang sejuk dan alami yang tidak akan didapatkan di perkotaan. Dampak adanya wisata Jagir, membuat Banyuwangi menjadi lebih terkenal sehingga mampu meningkatkan perekonomian warga Dusun Krajan. Sebelum adanya wisata Jagir, banyak masyarakat yang tidak memiliki usaha, akan tetapi kini dengan adanya wisata Jagir warga Dusun Krajan banyak yang membuka usaha seperti warung kopi dan warung makan di area sekitar pintu masuk Air Terjun Jagir.\n</string>
    <string name="wisataPerosodanKrajan">\t Banyu Perongsodan merupakan wisata alam yang dikelolah langsung oleh warga Dusun Krajan. Diprakarsai oleh Pak Untung, Pak Ferry, dan dua orang warga lainnya. Dioperasikan tahun 2017, kini banyu perongsodan menjadi salah satu wisata alam yang dikunjungi oleh wisatawan dari berbagai daerah. Wisata ini tidak dikenai biaya masuk, namun jika ingin menyewa ban wisatawan dikenakan biaya 5.000 rupiah. Di Banyu Perongsodan tersusun rapi batu-batu besar maupun kecil yang berkelok-kelok sehingga memperindah arus air yang melewatinya. Wisatawan disuguhkan dengan pemandangan batu-batu besar yang sangat menarik untuk dijadikan spot berfoto. Terdapat pula kursi berbahan dasar kayu dengan payung besar yang menutupinya. Jadi, wisatawan yang berkunjung akan merasakan kedamaian suasana sungai dengan gemercik aliran arus yang membuat suasana hati menjadi tenang dan damai.\n</string>
    <string name="keripikUsusKrajan">\tIbu Sunarti merupakan penduduk Dusun Krajan yang memiliki banyak UMKM. Contohnya yakni keripik usus, penjagalan ayam, frozen food, dan perhiasan perak. Awal mulanya bu Sunarti merupakan pembuat perhiasan perak dan penjagalan ayam. Penjagalan ayam yang dilakukan bu Sunarti ini untuk menyetok ayam kampung rumah-rumah makan yang ada di Daerah Banyuwangi. Sehingga bu Sunarti telah memiliki pasar tersendiri untuk usaha penjagalan ayamnya. Untuk usaha pembuatan perhiasaan perak bu Sunarti membuat perhiasannya hanya ketika ada pesanan, sehingga jika tidak ada pesanan maka bu Sunarti tidak melakukan produksi. Kebanyakan pesanan yang diterima Bu Sunarti berasal dari Bali. Untuk sisa penjagalan ayam dijadikan keripik usus dan untuk bagian jeroan ayam dijadikan frozen food. Sehingga tidak ada limbah yang tak terpakai dari usaha penjagalan ayamnya. Untuk pemasaran keripik ususnya sendiri bu Sunarti menitipkan produknya. Akhirnya bu Sunarti memanfaatkan limbah ayam tersebut yang berupa usus dan jeroan menjadi keripik dan frozen food. Usaha ini bersifat milik pribadi. Hambatan yang dialami bu Sunarti adalah kurangnya stock ayam kampung yang dibutuhkan. Solusi yang dilakukan bu Sunarti, ia mencari stock ayam kampung hingga ke kota Banyuwangi. Bu Sunarti dibantu oleh 4 orang pegawai. Setiap pegawai mendapat 1250/ekor ayam.\n</string>
    <string name="donakKrajan">\t DONAK merupakan singkatan dari Endok Enak. Produk yang dihasilkan berupa telur asin, telur bakar, telur rebus. Bu Linda Igrima yang menjalankan usaha DONAK tersebut. Sang suami memiliki peternakan bebek, sehingga telur yang dihasilkan berasal dari peternakannya sendiri. Bebek yang dimiliki pasangan suami istri ini sekitar 600 ekor. Biasanya, Bu Linda memproduksi sebanyak 450 butir dalam satu kali proses pembuatan. Satu kali pembuatan DONAK memakan waktu sekitar 2 minggu, sehingga telur asin yang dihasilkan menjadi masir.\n</string>
    <string name="keripikSingkong">\t UMKM keripik singkong milik Ibu Pipik ini mulai berdiri pada tahun 2007. Awal dari didirikannya usaha ini karena Ibu Pipik pernah mengalami kerugian akibat ada konsumen yang memesan singkong dan tidak jadi dibeli, sehingga dengan adanya bahan baku singkong yang melimpah, bu Pipik akhirnya berinisiatif untuk menjadikan singkong tersebut keripik. Alasan lain yang membuat bu Pipik tetap melakukan usaha ini yakni karena tuntutan ekonomi. Pemasaran yang dilakukan bu Pipik yakni dengan dijual pada toko-toko kecil.\n</string>
    <string name="title_activity_mapping">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Desa Kampung Anyar</string>
    <string name="nav_header_subtitle">Kota Banyuwangi Jawa Timur</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
