<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wisataKrajanActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bgtop"
        android:adjustViewBounds="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1.Wisata Air Banyu Perongsodan"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil_wisata"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Nama : Bpk. Untung"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Alamat : Jl. Kampunganyar, Krajan"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/deskripsi"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/text"
        android:layout_marginTop="15dp"
        android:text="@string/wisataPerosodanKrajan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gambar_wisata"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/wisata_perongsodan1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/wisata_perongsodan2"/>

    <!--NO 2-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2. Wisata Air Terjun Jagir"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil_wisata"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Nama : Hendri"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Alamat : Jl. Kampunganyar, Krajan"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_marginTop="15dp"
        android:text="@string/wisataJagirKrajan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gambar_wisata"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/wisataairterjunjagir"/>
    <!--NO 3-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="3. Wisata Kali Kedung"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil_wisata"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Nama : Vina Intan"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Alamat : Jl. Kampunganyar, Krajan"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_marginTop="15dp"
        android:text="@string/wisataKaliKedungKrajan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gambar_wisata"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/wisatakalikedung1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/wisatakalikedung2"
        android:layout_marginBottom="30dp"/>
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bgbot"
        android:adjustViewBounds="true"/>
</LinearLayout>
</ScrollView>