<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".umkmKrajanActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bgtop"
        android:adjustViewBounds="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1. Kue Kelemben"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil_pemilik_usaha"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Nama : Nurhayati"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Alamat : Jl. Kampunganyar, Krajan"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/deskripsi"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/text"
        android:layout_marginTop="15dp"
        android:text="@string/kueKelembenKrajan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gambar_produk"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/kue_kelemben"/>
    <!--NO 2-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2. DONAK"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil_pemilik_usaha"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Nama : Linda Iqrimah"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Alamat : Jl. Kampunganyar, Krajan RT 02 RW 02"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/deskripsi"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_marginTop="15dp"
        android:text="@string/donakKrajan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gambar_produk"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/umkmdonak1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/umkmdonak2"/>
    <!--NO 3-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="3. Keripik Singkong"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil_pemilik_usaha"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Nama : Pipik"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Alamat : Jl. Kampunganyar, Krajan RT 02 RW 02"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/deskripsi"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_marginTop="15dp"
        android:text="@string/keripikSingkong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gambar_produk"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/umkmkripik1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/umkmkripik2"/>
    <!--NO 4-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="4. Keripik Usus, Jagal Ayam, Frozen Food, Kerajinan Perak"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil_pemilik_usaha"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Nama : Sunarti"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Alamat : Jl. Kampunganyar, Krajan"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/deskripsi"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_marginTop="15dp"
        android:text="@string/keripikUsusKrajan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gambar_produk"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/umkmkripikusus1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/umkmkripikusus2"
        android:layout_marginBottom="30dp"/>
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bgbot"
        android:adjustViewBounds="true"/>
</LinearLayout>
</ScrollView>